[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Fonts/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Concerto/Interface_Concerto.png" type="Texture" id=2]
[ext_resource path="res://Globals/Camera/Camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Minigame2/concerto.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Minigame2/Controller/ControllBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Minigame2/NoteController/SpawnNote.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Minigame2/ClaveController/Clave.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.933333, 0.317647, 0.156863, 1 )
corner_radius_top_left = 29
corner_radius_top_right = 29
corner_radius_bottom_right = 29
corner_radius_bottom_left = 29

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 1 )

[node name="Concerto" type="Node2D"]
script = ExtResource( 4 )

[node name="Camera" parent="." instance=ExtResource( 3 )]

[node name="initial" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="initial"]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.831373, 0.764706, 0.839216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="initial"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.933333, 0.317647, 0.156863, 1 )
text = "Concerto"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_play_game" type="Button" parent="initial"]
anchor_left = 0.353125
anchor_top = 0.752778
anchor_right = 0.641406
anchor_bottom = 0.834722
margin_left = 458.0
margin_top = 540.0
margin_right = 827.0
margin_bottom = 599.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Iniciar jogo"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="GameConcerto" type="Node2D" parent="."]
position = Vector2( 1280, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Background" type="TextureRect" parent="GameConcerto"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControllBar" parent="GameConcerto" instance=ExtResource( 5 )]
margin_left = 256.0
margin_top = 125.0
margin_right = 256.0
margin_bottom = 125.0

[node name="SpawnNote" parent="GameConcerto" instance=ExtResource( 6 )]
position = Vector2( 1120, 244 )

[node name="Scores" type="Label" parent="GameConcerto"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 580.0
margin_top = 540.0
margin_right = 700.0
margin_bottom = 590.0
custom_fonts/font = SubResource( 4 )
text = "00000"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Clave" parent="GameConcerto" instance=ExtResource( 7 )]
position = Vector2( 195, 332 )

[connection signal="pressed" from="initial/Button_play_game" to="." method="_on_Button_play_game_pressed"]
[connection signal="update_scores" from="GameConcerto/SpawnNote" to="." method="_on_SpawnNote_update_scores"]
